<resources>
    <string name="app_name">BrainTrain</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">KIM JUNHEE</string>
    <string name="nav_header_subtitle">Contact me via manuna530@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Game</string>
    <string name="menu_slideshow">Result</string>
    <string name="landingPage">landingPage</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="game_exp">The developer guarantees that this app will activate your brain 100%.</string>
    <string name="sub_title">This Game is to Train your Brain</string>
    <string name="title">Brain Train</string>
    <string name="title_up">STUDY</string>
    <string name="click_here">Click Here!</string>
    <string name="game_functions">Game Functions</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- Preference Titles -->
    <string name="messages_header">Motivational Quote</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">today quote</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="menu_settings">settings</string>
    <string name="select_and_enter">Click me and Enter</string>
    <string name="logout_title">로그아웃</string>
    <string name="logout_summary">앱에서 로그아웃합니다.</string>
    <string name="logout">logout</string>
    <string name="signout">회원 탈퇴</string>
    <string name="signoutsummary">앱에서 탈퇴합니다.</string>
</resources>