<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/messages_header">

        <EditTextPreference
            app:key="signature"
            app:title="@string/signature_title"
            app:useSimpleSummaryProvider="true"
            android:defaultValue="@string/select_and_enter"
            android:summary="@string/select_and_enter" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/logout">

        <Preference
            app:key="logout"
            app:title="@string/logout_title"
            app:summary="@string/logout_summary"/>

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/signout">

        <Preference
            app:key="signout"
            app:title="@string/signout"
            app:summary="@string/signoutsummary"/>

    </PreferenceCategory>

</PreferenceScreen>
