<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.braintrain.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.braintrain.ui.game.GameFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_game">

        <action
            android:id="@+id/action_navigation_game_to_navigation_result"
            app:destination="@id/nav_slideshow" />
        <action
            android:id="@+id/action_nav_gallery_to_nav_slideshow"
            app:destination="@id/nav_slideshow" />
    </fragment>

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.braintrain.ui.result.ResultFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_result" >
        <action
            android:id="@+id/action_navigation_result_to_navigation_game"
            app:destination="@id/nav_gallery" />
    </fragment>

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.braintrain.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@id/fragment_result">

        <action
            android:id="@+id/action_nav_settings_to_nav_slideshow"
            app:destination="@id/nav_slideshow" />
    </fragment>

</navigation>