<?xml version="1.0" encoding="utf-8"?>
    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.home.HomeFragment">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/landingpagebackgroundimg"
            android:scaleType="centerCrop" />

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#ffb0c4de"
            android:alpha="0.9" />


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="400dp"
                    >


                    <View
                        android:id="@+id/view"
                        android:layout_width="wrap_content"
                        android:background="@color/loyal_blue"
                        android:layout_height="200dp"
                        android:alpha="0.8"
                        />

                    <LinearLayout
                        android:layout_width="350dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:gravity="center_horizontal"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="200dp"
                            android:layout_weight="0.9"
                            android:gravity="center_vertical"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/textView10"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/title_up"
                                android:textColor="#cccccc" />

                            <TextView
                                android:id="@+id/textView11"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/title"
                                android:textColor="@color/white"
                                android:textSize="35sp" />

                            <TextView
                                android:id="@+id/textView12"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/sub_title"
                                android:textColor="#bdbdbd" />

                        </LinearLayout>

                        <ImageView
                            android:id="@+id/imageView6"
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:layout_marginTop="50dp"
                            android:src="@drawable/jeon" />

                    </LinearLayout>

                    <LinearLayout
                        android:background="@drawable/home_game_explanation"
                        android:layout_width="350dp"
                        android:layout_height="200dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="70dp"
                        android:orientation="vertical">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:id="@+id/textView13"
                                android:layout_width="201dp"
                                android:layout_height="93dp"
                                android:text="@string/game_exp"
                                android:textSize="20sp"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toStartOf="@+id/guideline17"
                                app:layout_constraintTop_toTopOf="parent"
                                app:layout_constraintVertical_bias="0.504" />

                            <androidx.constraintlayout.widget.Guideline
                                android:id="@+id/guideline16"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal"
                                app:layout_constraintGuide_begin="20dp" />

                            <androidx.constraintlayout.widget.Guideline
                                android:id="@+id/guideline17"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                app:layout_constraintGuide_begin="231dp" />

                            <TextView
                                android:id="@+id/textView14"
                                android:layout_width="68dp"
                                android:layout_height="23dp"
                                android:layout_marginBottom="70dp"
                                android:rotation="38"
                                android:text="@string/click_here"
                                android:textColor="#ffffb5"
                                android:textSize="13dp"
                                android:textStyle="bold"
                                app:layout_constraintBottom_toBottomOf="@+id/textView13"
                                app:layout_constraintEnd_toEndOf="@+id/textView13"
                                app:layout_constraintTop_toTopOf="@+id/textView13" />

                            <ImageView
                                android:id="@+id/imageView4"
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:layout_weight="1"
                                android:rotation="180"
                                android:src="@drawable/cursordown"
                                app:layout_constraintBottom_toTopOf="@+id/home_items_recycler"
                                app:layout_constraintEnd_toStartOf="@+id/guideline15"
                                app:layout_constraintStart_toStartOf="@+id/guideline3" />

                            <androidx.recyclerview.widget.RecyclerView
                                android:id="@+id/home_items_recycler"
                                android:layout_width="60dp"
                                android:layout_height="110dp"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toEndOf="@+id/textView13"
                                app:layout_constraintTop_toTopOf="parent" />

                            <ImageView
                                android:id="@+id/imageView5"
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:layout_weight="1"
                                android:src="@drawable/cursorup"
                                app:layout_constraintEnd_toStartOf="@+id/guideline15"
                                app:layout_constraintStart_toStartOf="@+id/guideline3"
                                app:layout_constraintTop_toBottomOf="@+id/home_items_recycler" />

                            <androidx.constraintlayout.widget.Guideline
                                android:id="@+id/guideline3"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                app:layout_constraintGuide_end="80dp" />

                            <androidx.constraintlayout.widget.Guideline
                                android:id="@+id/guideline15"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                app:layout_constraintGuide_end="39dp" />
                        </androidx.constraintlayout.widget.ConstraintLayout>

                    </LinearLayout>
                </FrameLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_marginBottom="30dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/view3"
                        android:orientation="horizontal"
                        android:layout_width="170dp"
                        android:layout_height="250dp"
                        android:layout_marginRight="5dp"
                        android:padding="8dp"
                        android:background="@drawable/background_home_sub_explanation"
                        android:layout_gravity="center"

                        >

                        <ImageView
                            android:id="@+id/imageView8"
                            android:layout_width="5dp"
                            android:layout_height="210dp"
                            android:layout_weight="1"
                            android:src="@drawable/linedot" />

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/textView21"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="10dp"
                                android:textStyle="bold"
                                android:textColor="#008000"
                                android:text="HOME\nstart point" />

                            <TextView
                                android:id="@+id/textView22"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="15dp"
                                android:text="THE WAY" />

                            <TextView
                                android:id="@+id/textView23"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="13dp"
                                android:text="HANBIT\n middle point" />

                            <TextView
                                android:id="@+id/textView24"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="27dp"
                                android:text="PlayGround" />

                            <TextView
                                android:id="@+id/textView25"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textColor="#FF0000"
                                android:textStyle="bold"
                                android:text="MIRAE\ndest point" />
                        </LinearLayout>

                    </LinearLayout>

                    <FrameLayout
                        android:id="@+id/view4"
                        android:layout_width="170dp"
                        android:layout_height="250dp"
                        android:layout_gravity="center"
                        android:background="@drawable/background_home_items_explanation"
                        android:layout_marginStart="5dp"

                        />
                </LinearLayout>

                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/tabLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@android:color/transparent"
                    app:tabGravity="fill"
                    app:tabIndicatorColor="@android:color/transparent"
                    app:tabMode="fixed"
                    app:tabSelectedTextColor="@color/black"
                    app:tabTextColor="@android:color/white" />

                <androidx.viewpager.widget.ViewPager
                    android:id="@+id/pager"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="500dp" >
                </androidx.viewpager.widget.ViewPager>


                <LinearLayout
                    android:id="@+id/footer"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:background="@color/loyal_blue"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView20"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:alpha="0.8"
                        android:gravity="center"
                        android:layout_margin="20dp"
                        android:textSize="30dp"
                        android:textColor="@color/white"
                        android:layout_weight="0.7"
                        android:text="Brain Train" />


                    <TextView
                        android:id="@+id/textView19"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/loyal_blue"
                        android:alpha="0.8"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:layout_weight="0.3"
                        android:text="© 2024 KIM'S COMPANY" />

                </LinearLayout>

            </LinearLayout>




        </ScrollView>

    </FrameLayout>
